[package]
name = "test"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/test.rs"
crate-type = ["cdylib"]

[dependencies]
dotenv = "0.15.0"
github-flows = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.93"
tokio_wasi = { version = "1.25.1", features = ["macros", "rt"] }
flowsnet-platform-sdk = "0.1"
words-count = "0.1.4"
log = "0.4"
